# pip-template

./: .pre-commit-config.yaml  README.md  build.sh  pyproject.toml  requirements.txt
src/pip_template/: __init__.py  main.py
